--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   "permissions": ["http://*/", "https://*/", "storage", "activeTab", "fileSystem" ],
   "content_scripts": [
     {
-      "matches": ["https://danbooru.donmai.us/posts/*", "https://gelbooru.com/*"],
+      "matches": ["https://danbooru.donmai.us/posts/*"],
       "js": ["contentScript.js"]
     }
   ]
